--- a/appplication.yml
+++ b/appplication.yml
@@ -1,14 +1,14 @@
 spring:
-  profiles:
-    active:
-    - dev
+    profiles:
+        active:
+        - dev
 ---
 spring:
-  profiles: dev
+    profiles: dev       # 开发环境
     application:
-      name: microsevercloud-cofig-ldg-dev
+        name: microservicecloud-config-noodles-dev
 ---
 spring:
-  profiles: test
+    profiles: test      # 测试环境
     application:
-      name: microsevercloud-cofig-ldg-test
+        name: microservicecloud-config-noodles-test
